# smart-assistant-cli

./: .gitignore  README.md  pyproject.toml
data/: history.txt
src/: __init__.py  __main__.py  cli.py  contact.py  fields.py  handlers.py  note.py  renderer.py  repository.py
src/smart_assistant/: __init__.py  __main__.py  cli.py
src/smart_assistant/handlers/: __init__.py  contacts.py  notes.py
src/smart_assistant/models/: __init__.py  contact.py  fields.py  note.py
src/smart_assistant/storage/: __init__.py  repository.py
src/smart_assistant/ui/: __init__.py  renderer.py
